--- a/HoyluShare/app/src/main/res/values/strings.xml
+++ b/HoyluShare/app/src/main/res/values/strings.xml
@@ -1,3 +1,22 @@
 <resources>
     <string name="app_name">HoyluShare</string>
+    <string name="no_inet_connection">Keine Internetverbindung!</string>
+    <string name="want_connection">Wollen Sie sich verbinden?</string>
+    <string name="yes">Ja</string>
+    <string name="no">Nein</string>
+    <string name="destroy_message">Leider benötigen Sie für diese App eine Internetverbindung!</string>
+    <string name="attention">Achtung!</string>
+    <string name="identify_message">Um Geräte in Ihrem Netzwerk zu identifizieren, schalten Sie WLAN ein!</string>
+    <string name="no_camera_permission">Keine Erlaubnis für Kamera</string>
+    <string name="uploading_message">Daten werden am Server hochgeladen...</string>
+    <string name="upload_successful">Bild erfolgreich hochgeladen!</string>
+    <string name="uploading_error">Fehler beim Hochladen des Bildes!</string>
+    <string name="notify_server">Server benachrichtigt</string>
+    <string name="turn_on_wifi">Schalten Sie Ihr WLAN ein</string>
+    <string name="no_devices">Keine Geräte im Netzwerk</string>
+    <string name="focus_on_qr">Auf einen QR-Code richten</string>
+    <string name="dev_in_network">Geräte im Netzwerk</string>
+    <string name="valid">Gültige ID</string>
+    <string name="invalid">Keine Gültige ID</string>
+    <string name="server_off">Server ist offline</string>
 </resources>
