gelöschte änderungen neu gemacht
bei bluetooth wird die callback methode am androidclient nicht
aufgerufen....beim receiver werden fotos nur angezeigt aber nicht im
angegebenen verzeichnis gespeichert

--- a/AndroidClient/Hoylu/app/src/main/res/values/strings.xml
+++ b/AndroidClient/Hoylu/app/src/main/res/values/strings.xml
@@ -20,11 +20,16 @@
     <string name="turn_on_wifi">Schalten Sie Ihr WLAN ein</string>
     <string name="no_devices">Keine Geräte im Netzwerk</string>
     <string name="focus_on_qr">Auf einen QR-Code richten</string>
-    <string name="dev_in_network">Geräte im Netzwerk</string>
+    <string name="dev_in_network">Registrierte Geräte am Server</string>
     <string name="valid">Gültige ID</string>
     <string name="invalid">Keine Gültige ID</string>
     <string name="server_off">Server ist offline</string>
     <string name="save_or_close">Was wollen Sie tun?</string>
     <string name="receiving_data">Empfange Daten...</string>
     <string name="receive_message">Folgende Datei erhalten: </string>
+    <string name="size">Größe: </string>
+    <string name="received">Empfangen: </string>
+    <string name="receivedfiles">Empfangene Daten</string>
+    <string name="gallery">Galerie</string>
+    <string name="receiver">Empfänger</string>
 </resources>
